# lyrics_analytics

./: .gitignore  Dockerfile  Makefile  README.MD  README.md  access_token.py  app.py  compose.yml  docker-compose.rabbitredis.yml  docker-compose.yml  lyrics_analytics_demo.py  lyrics_analytics_main.py  pyproject.toml  requirements.txt  run.sh  run_async.py  run_web.sh  run_worker.sh  runflask.sh  runrabbit.sh  runrabbitmq.sh  runredis.sh  runworker.sh
.github/workflows/: main.yml
_lyrics_analytics/api/: __init__.py
_lyrics_analytics/database/: db.py  queries.py
_lyrics_analytics/services/: genius.py  scraper.py
_lyrics_analytics/worker/: tasks.py
data/: artist_data.csv
lyrics_analytics/: __init__.py  api_fetch_timer.py  api_timing_record.csv  config.py  get_data.py  get_year.py  lyrics-analytics.db  most_common.py  search_lyrics.py  stats_reporting.py  visualisations.py
lyrics_analytics/api/: __init__.py  auth.py  config.py  demo.py  extensions.py  forms.py  models.py  search.py
lyrics_analytics/backend/: cache.py  db.py  message_broker.py  task.py  tasks.py
lyrics_analytics/background/: cache.py  main.py  message_broker.py  mq_connection.py  rabbitmq.py  register.py  task.py  tasks.py  worker.py
lyrics_analytics/database/: cache.py  db.py  queries.py
lyrics_analytics/services/: constants.py  genius.py  genius_api.py  lyrics_scraper.py  queue.py  reporting.py  reports.py  scraper.py  search_artist.py
lyrics_analytics/tasks/: tasks.py
lyrics_analytics/worker/: tasks.py  worker.py
notebooks/: LA_genius_ovh_api.ipynb  lyrics_analytics_spotifty.ipynb  lyrics_analytics_testing.ipynb  spotify_api.ipynb
scripts/: coverage_report.sh
src/: config.py  data_store.py  genius_api.py  lyric_store.py  lyrics_scraper.py  main.py  musicmax_api.py
tests/: process_data_test.py  test_lyric_metrics.py  test_most_common.py
tmp/: cloudformation.yml
worker/: broker.py  config.py  consumer.py  genius.py  logger.py  models.py  scraper.py  store.py  tasks.py
(+89 files in other folders)
