[tool.poetry]
name = "lyrics-analytics"
version = "0.2.0"
description = ""
authors = ["Anton <antongb09@gmail.com>"]
packages = [{include = "lyrics_analytics"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
poetry-dotenv-plugin = "^0.1.0"
flask = "^2.2.2"
beautifulsoup4 = "^4.11.1"
redis = "^4.4.2"
pika = "^1.3.1"
celery = "^5.2.7"
flask-sqlalchemy = "^3.0.3"
pandas = "^1.5.3"
pymongo = "^4.3.3"
matplotlib = "^3.7.0"
seaborn = "^0.12.2"
plotly = "^5.17.0"
python-dotenv = "^1.0.0"
pytest-cov = "^4.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
black = "^23.9.1"
flake8 = "^6.1.0"
flake8-pyproject = "^1.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 120