[project]
name = "lyrics-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "flask>=3.1.1",
    "httpx>=0.28.1",
    "pika>=1.3.2",
    "pydantic>=2.11.7",
    "ruff>=0.12.2",
    "sqlalchemy>=2.0.41",
]

[dependency-groups]
dev = ["pytest>=8.4.1"]

[tool.ruff]
line-length = 120


[tool.pytest.ini_options]
testpaths = ["tests"]